484.	[func]		tomek
	A new library (libb10-dhcpsrv) has been created. At present, it
	only holds the code for the DHCP Configuration Manager. Currently
	this object only supports basic configuration storage for the DHCPv6
	server,	but that capability will be expanded.
	(Trac #2238, git 6f29861b92742da34be9ae76968e82222b5bfd7d)

bind10-devel-20120927 released on September 27, 2012

483.	[func]		marcin
	libdhcp++: Added new parameter to define sub-second timeout
	for DHCP packet reception. The total timeout is now specified
	by two parameters:  first specifies integral number of
	seconds, second (which defaults to 0) specifies fractional
	seconds with microsecond resolution.
	(Trac #2231, git 15560cac16e4c52129322e3cb1787e0f47cf7850)

482.	[func]		team
	Memory footprint of the in-memory data source has been
	substantially improved.  For example, b10-auth now requires much
	less memory than BIND 9 named for loading and serving the same
	zone in-memory.  This is a transparent change in terms of user
	operation; there's no need to update or change the configuration
	to enable this feature.
	Notes: multiple instances of b10-auth still make separate copies
	of the memory image.  Also, loading zones in memory still suspends
	query processing, so manual reloading or reloading after incoming
	transfer may cause service disruption for huge zones.
	(Multiple Trac tickets, Summarized in Trac #2101)

481.	[bug]		vorner
	The abbreviated form of IP addresses in ACLs is accepted
	(eg. "from": ["127.0.0.1", "::1"] now works).
	(Trac #2191, git 48b6e91386b46eed383126ad98dddfafc9f7e75e)

480.	[doc]		vorner
	Added documentation about global TSIG key ring to the Guide.
	(Trac #2189, git 52177bb31f5fb8e134aecb9fd039c368684ad2df)

479.	[func]		marcin
	Refactored perfdhcp tool to C++, added missing unit tests and removed
	the old code. The new code uses libdhcp++ (src/lib/dhcp) for DHCP
	packet management, network interface management and packet
	transmission.